--- a/style/style.css
+++ b/style/style.css
@@ -1,393 +1,687 @@
 @font-face {
-    font-family: 'Capture Smallz';
-    src: url(font/20082.eot);
-    src: url(font/20082.eot?#iefix) format('embedded-opentype'), url(font/20082.woff?#iefix) format('woff'), url(font/20082.woff2?#iefix) format('woff2'), url(font/20082.ttf?#iefix) format('truetype');
+  font-family: "Capture Smallz";
+  src: url(font/20082.eot);
+  src: url(font/20082.eot?#iefix) format("embedded-opentype"), url(font/20082.woff?#iefix) format("woff"),
+    url(font/20082.woff2?#iefix) format("woff2"), url(font/20082.ttf?#iefix) format("truetype");
 }
-:root{
-    --main:#171515;
-    --second:#b3bcc8;
-    --grey: #d2d2d2;
-    --white: #ffffff;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
 
-    --akcent:#ff652f;
-    --second-akcent:#912700f4;
+:root {
+  --main: #0d0b0a;
+  --balck: #171515;
+  --second: #b3bcc8;
+  --grey: #d2d2d2;
+  --white: #ffffff;
 
+  --akcent: #ff652f;
+  --second-akcent: #505357;
 
-    --t-main:#f2f1f1;    
-    --title:#ffffffda;    
+  --t-main: #f2f1f1;
+  --title: #ffffffda;
 }
-*{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-decoration: none;
-}
-html{
-    scroll-behavior: smooth;
-}
-h1,h2,h3{
-    color: var(--title);
-    text-align: center;    
-font-family: 'Capture Smallz';
-letter-spacing: 1.2px;
+p, a, svg {
+  text-indent: 25px;
+  font-size: 20px;
+  color: var(--t-main);
 }
 
-p{
-    color: var(--t-main);    
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+
+  list-style: none;
+  text-decoration: none;
+  
+  user-select: none;
+ 
 }
-body{
-    background-color: var(--main);
-    overflow: hidden scroll;
+html {
+  scroll-behavior: smooth;
 }
-.section{
-    height: max-content;
-    padding: 0px 100px;
-    padding-top: 100px;
+h1,
+h2,
+h3 {
+  color: var(--title);
+  font-family: "Capture Smallz";
+  letter-spacing: 1.2px;
 }
-.title{
-    font-size: 40px;
-    margin-bottom: 50px;
+body {
+  overflow: hidden scroll;
+}
+body::before {
+  content: "";
+  position: fixed;
+  width: 200%;
+  height: 300vh;
+  left: -50%;
+  top: -100%;
+  z-index: -1;
+  background-color: var(--balck);
+  mix-blend-mode: multiply;
+}
+html::before {
+  content: "";
+  position: fixed;
+  width: 200%;
+  height: 300vh;
+  left: -50%;
+  top: -100%;
+  z-index: -1;
+  background-size: cover;
+  transform: rotate(90deg);
+
+  background: url(/img/FON.jpg) 0 0 repeat;
+  background-size: contain;
+  filter: invert(1);
 }
 
+.section {
+  padding-top: 100px;
+}
+
+.title {
+  font-size: 70px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+/* загальне */
+
+.giroscop:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.03);
+}
+.giroscop {
+  min-width: 300px;
+  background: var(--main);
+  border-radius: 15px 0 15px 0;
+
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3),
+    -5px -5px 15px rgba(255, 255, 255, 0.1);
+  border-radius: 15px 0 15px 0;
+  margin: 20px;
+
+  transition: 1s;
+  padding: 20px;
+}
+
+.df {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.warp {
+  flex-wrap: wrap;
+}
+
+.df p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.galary-container {
+  position: relative;
+  height: 700px;
+  padding-top: 200px;
+  top: -100px;
+  width: 600px;
+}
+.galary {
+  transition: 1s;
+  position: relative;
+}
+.card {
+  position: absolute;
+}
+
+
+.numerous {
+  position: absolute;
+  top: -10px;
+  right: 30px;
+  font-size: 8rem;
+  color: var(--akcent);
+  opacity: 0.5;
+}
+
+
+
+button {
+  font-size: 50px;
+  padding: 0 15px;
+  cursor: pointer;  
+  background-color: transparent;
+  border: none;
+  color: var(--white);
+}
+
+
+.control {
+  justify-content: space-between;
+  position: relative;
+  display: flex;
+  z-index: 10;
+}
+
+/* загальне */
 
 /* navbar */
-header{
-    width: 100%;
-    position: fixed;
-    z-index: 100;
+header {
+  width: 100%;
+  position: fixed;
+  z-index: 100;
 }
-.nav-item{
-    margin: 15px;    
-    color: var(--grey);
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.nav-item, a {
+  margin: 15px;
 }
-.nav-item a{    
-    color: var(--grey);
+
+nav ul {
+  display: flex;
+  height: 50px;
 }
-nav ul{
-    display: flex;
-    height: 50px;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-nav{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;   
-    transition: 1s; 
-}
-nav .logo{
-    margin-right: 100px;
-    font-size: 35px;
+nav .logo {
+  margin-right: 100px;
 }
 .blac{
-    background-color: var(--second-akcent);
-    transition: 0.5s;
+  background-color: var(--second-akcent);
 }
 
 /* navbar */
 
-/* slider */
-.slots{
-    display: flex;
-    justify-content:center;
-    position: relative;
-    top: -120px;
-}
-.slots .slots-item{
-    margin: 10px;
-    border-bottom: 7px solid var(--grey);
-    width: 7px;
-    transition: 0.5s;
-    border-radius: 50%  ;
-}
-.slots-item.active{  
-    transition: 1s;
-    border-bottom: 7px solid var(--akcent);
-}
-.slider .control li{
-    font-size: 50px;
-    color: var(--white);
-    width: max-content;    
-    padding:0 15px ;
-    cursor: pointer;
-    user-select: none;
-}
-.control{
-    position: relative;
-    top: -400px;    
-    width:100%;    
-    display: flex;
-    justify-content: space-between;
-    z-index: 10;
-}
-.slider{
-    width:100%;    
-    margin: auto;    
-    height: 800px;  
-}
-.slider-img::after{
-    content: ' ';
-    position: absolute;
-    width: 100%;
-    height: 820px;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, 
-    rgba(0, 0, 0, 0.824) 0%,     
-    rgba(0,0,0,0.05) 40%, 
-    rgba(0,0,0,0.05) 70%, 
-    rgba(0, 0, 0, 0.536) 100%);
-}
-
-.slider-img{
-    z-index: -1;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 820px;
-    overflow: hidden;
-    margin: auto;
-    width:100%;
-}
-.centre{    
-    transition: 2s;
-}
-.centre-revers{    
-    transition: 2s;
-    transform: translateY(-7000px);
-}
-.slider .item{
-    height: 1000px;
-    background-size: cover;
-    width: 100%;
-}
-.centre-revers .item{   
-    background-position: -100%;
-}
-
-.slider .item1{ background-image: url(../img/1.JPG);}
-.slider .item2{ background-image: url(../img/2.JPG);}
-.slider .item3{ background-image: url(../img/3.JPG);}
-.slider .item4{ background-image: url(../img/4.JPG);}
-.slider .item5{ background-image: url(../img/5.JPG);}
-.slider .item6{ background-image: url(../img/6.JPG);}
-.slider .item7{ background-image: url(../img/7.JPG);}
-.slider .item8{ background-image: url(../img/8.JPG);}
-
-/* slider */
-
-
-
 /* HERO */
-.hero{
-    height: 820px;
-    overflow: hidden;
+/* slider */
 
+.slots {
+  position: relative;
+  top: -120px;
 }
-.hero-text{
-    position: absolute;
-    width: 80%;
-    margin:20% 10%;   
-    z-index: 10;  
-      
+.hero .slots-item {
+  margin: 10px;
+  border-bottom: 7px solid var(--grey);
+  width: 7px;
+  transition: 0.5s;
+  border-radius: 50%;
 }
-.hero-title{    
-    font-size: 70px;
-    color: var(--grey);
-    text-shadow: 10px 15px 15px black;
+.hero .slots-item.active {
+  transition: 1s;
+  border-bottom: 7px solid var(--akcent);
+}
+
+.hero .control {
+  top: -400px;
+  width: 100%;  
+}
+
+.hero .slider {
+  width: 100%;
+  margin: auto;
+  height: 800px;
+}
+.hero .slider-img::after {
+  content: " ";
+  position: absolute;
+  width: 100%;
+  height: 820px;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.824) 0%,
+    rgba(0, 0, 0, 0.05) 40%,
+    rgba(0, 0, 0, 0.05) 70%,
+    rgba(0, 0, 0, 0.536) 100%
+  );
+}
+
+.hero .slider-img {
+  z-index: -1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 820px;
+  overflow: hidden;
+  margin: auto;
+  width: 100%;
+}
+.hero .centre , .centre-revers{
+  transition: 2s;
+}
+.hero .centre-revers {
+  transform: translateY(-7000px);
+}
+.hero .item {
+  height: 1000px;
+  background-size: cover;
+  width: 100%;
+}
+.hero .centre-revers .item {
+  background-position: -100%;
+}
+
+.hero .item1 {
+  background-image: url(../img/1.JPG);
+}
+.hero .item2 {
+  background-image: url(../img/2.JPG);
+}
+.hero .item3 {
+  background-image: url(../img/3.JPG);
+}
+.hero .item4 {
+  background-image: url(../img/4.JPG);
+}
+.hero .item5 {
+  background-image: url(../img/5.JPG);
+}
+.hero .item6 {
+  background-image: url(../img/6.JPG);
+}
+.hero .item7 {
+  background-image: url(../img/7.JPG);
+}
+.hero .item8 {
+  background-image: url(../img/8.JPG);
+}
+
+/* slider */
+
+
+.hero {
+  height: 820px;
+  overflow: hidden;
+}
+
+.hero-title {
+  font-size: 70px;
+  color: var(--grey);
+  text-shadow: 10px 15px 15px black;
+
+  position: absolute;
+  width: 80%;
+  margin: 20% 10%;
+  z-index: 10;
 }
 /* HERO */
 
 /* advantages */
 
-.advantages li p:nth-child(even)
-{
-    border-left:5px solid var(--akcent) ;       
+.advantages li p:nth-child(even) {
+  border-left: 5px solid var(--akcent);
 }
-.advantages li p:nth-child(odd){
-    border-right:5px solid var(--akcent) ; 
+.advantages li p:nth-child(odd) {
+  border-right: 5px solid var(--akcent);
 }
 
-.advantages svg{
-    height: 100px;    
-    padding:50px 0;
-    color: var(--akcent);
-    filter: drop-shadow( 5px 15px 1px rgba(255, 255, 255, 0.087) );
+.advantages svg {
+  height: 100px;
+  padding: 50px 0;
+  color: var(--akcent);
+  filter: drop-shadow(5px 15px 1px rgba(255, 255, 255, 0.087));
 }
-.advantages p{
-    font-family: 'Capture Smallz';
-    font-size: 25px;
-    
-    padding:50px 0;
-    height: 100px;   
+.advantages p {
+  font-family: "Capture Smallz";
+  font-size: 25px;
+  height: 150px;
 }
-.advantages li *{
-width: 50%;
-
-}
-.advantages li{
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    text-align: center;    
-    width: 100%;    
+.advantages li * {
+  width: 40%;
+  padding: 50px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 
+/* advantages */
+
+/* aboutUs */
+
+.blacd {
+  width: 100%;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, var(--main) 0%, var(--main) 35%, rgba(0, 0, 0, 0) 100%);
+  padding-bottom: 100px;
+}
+.AboutUs {
+  background-image: url(../img/9.JPG);
+  background-size: cover;
+  background-position: 50%;
+  box-shadow: 0px -37px 77px 34px var(--main);
+}
+
+
+.AboutUs .text {
+  width: 550px;
+  padding: 25px;
+  border-radius: 5px;
+}
+.AboutUs .text p {
+  padding: 15px;
+}
+
+.AboutUs .riding-text {
+  margin: auto;
+  width: 100%;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 150px;
+}
+.AboutUs img {
+  mix-blend-mode: screen;
+}
 
 
 
+
+.card-relative {
+
+  position: relative;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3),
+  -5px -5px 15px rgba(255, 255, 255, 0.1);
+border-radius: 15px 0 15px 0;
+margin: 20px;
+transition: 0.5s;
+}
+
+.riding-text .card-relative {
+  min-width: 300px;
+  height: 350px;
  
-/* advantages */
+}
+
+.riding-text .box {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background: var(--main);
+  border-radius: 15px 0 15px 0;
+  transition: 0.5s;
+}
+
+.riding-text .card:hover .box {
+  transform: translateY(-25px);
+}
+
+
+.riding-text .content {
+  padding: 15px;
+  text-align: center;
+}
+
+
+.riding-text .content h3 {
+  font-size: 1.8rem;
+  color: var(--title);
+  z-index: 10;
+  margin-bottom: 15px;
+  margin-top: 25px;
+}
+
+.riding-text .content p {
+  font-size: 1rem;
+  font-weight: 300;
+  color: var(--t-main);
+  z-index: 10;
+
+  text-indent: 0px;
+}
 
 
 
+
+
+/* aboutUs */
 
 /* Продукція */
-.property-container{
-    width: 120%;
-    height: 500px;
-    overflow: hidden;
-    margin: 0 -10%;
-}
-.property{
-    
- transform: rotatez(18deg);    
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 1550px;
-    z-index: -1;
-    transition: 1s;
+.Products {
+  height: 1500px;
 }
 
-.property div{
-    border-left:5px solid black ;
-    background-color: var(--second-akcent);
-    transform: rotatez(90deg);     
-    padding: 10px 20px;    
-    width: 600px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;    
-    box-shadow: 4px 35px 37px 14px rgba(34, 60, 80, 0.2);
+.Products .galary {
+  transition: 4s;
+  top: 150px;
 }
-.property h3{
-    border-bottom:2px solid black  ;
-    width: max-content;
-    margin: auto;
-    text-align: center;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
+.Products .galary-container {
+  float: right;
+  cursor: pointer;
+}
+.Products .card {
+  transform: rotatez(calc(36deg * var(--i))) translatex(650px);
 }
 
-.property-item{
-    font-size: 20px;
-    display: flex;
-    text-align: center;
-    position: absolute;    
-    transform: rotatez(calc(36deg*var(--i))) translatex(1500px) ;
+.Products .giroscop {
+  transform: rotatez(calc(-36deg * var(--j)));
+  height: 250px;
+  transition: 4s;
 }
-.property p{
 
-    font-size: 16px;
+.Products .content {
+  padding: 100px 0;
+  text-align: center;
+}
+
+.Products h3 {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 2.5rem;
+  text-align: center;
+  color: var(--title);
+}
+
+.Products .text {
+  margin-top: 50px;
+  padding-top: 100px;
+  width: 50%;
+}
+
+.Products .text img {
+  position: absolute;
+  transform: rotatey(180deg);
+  filter: invert(0.8);
+}
+.Products .galary {
+  left: 750px;
 }
 
 /* Продукція */
 
+/* Фракційний склад */
+.sheben {
+  height: 1000px;
+  box-shadow: -1px -13px 28px 11px rgba(34, 60, 80, 0.2);
+  background-color: var(--main);
+}
+
+.sheben .text {
+  width: 55%;
+}
+
+.table-sheben {
+  color: var(--white);
+  padding-top: 50px;
+  align-items: stretch;
+}
+.table-sheben li {
+  width: 300px;
+  margin: 15px 15px;
+  padding: 15px;
+}
+.table-sheben li {
+  border-bottom: 5px solid var(--second-akcent);
+}
+
+.sheben .galary-container {
+  top: 250px;
+  left: -100px;
+}
+.sheben .galary {
+  left: -750px;
+}
+.sheben .card {
+  transform: rotatez(calc(45deg * var(--i))) translatex(700px);
+}
+
+.sheben .giroscop:hover {
+  transform: translateY(-25px);
+  transition: 1s;
+}
+
+.sheben .content {
+  padding: 100px 0;
+  text-align: center;
+}
+
+.sheben .numerous {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 4rem;
+}
+
+.sheben .giroscop {
+  transform: rotatez(calc(-45deg * var(--j)));
+  height: 400px;
+}
+
+.sheben .control {
+  top: 5%;
+  left: 50%;
+  width: 70%;
+  transform: rotatez(90deg);
+}
 
 
 /* Фракційний склад */
-.sheben{
-    height: 600px;
-    box-shadow: -1px -13px 28px 11px rgba(34, 60, 80, 0.2);
-}
-.sheben .container{
-    display: flex;
-flex-wrap: wrap;
-
-}
-.container .item{
-    width: 50%;
-}
-
-.galary-container{
-    position: relative;
-    overflow: hidden;
-    height: 550px;
-    padding-top: 150px;
-    left: -10%;
-    top: -100px;
-}
-.galary{
-    transition: 1s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    left: -600px;
-    top: 200px;
-}
-.sheben .card{
-    position: absolute;
-    transform: rotatez(calc(45deg * var(--i))) translatex(500px);
-
-}
-.galary .giroscop{
-    transform: rotatez(calc(-45deg*var(--j)));
-    transition: 1s;
-    background-color: var(--second-akcent);
-    padding: 20px;
-    box-shadow: 29px 29px 31px 4px rgba(2, 4, 6, 0.53);
-}
-.sheben  .control{
-    position: absolute;
-    top: 45%;
-    left: 45%;    
-    width: 400px;
-    z-index: 10;
-    transform: rotatez(90deg);
-}
-.control li{
-    font-size:60px;
-    color: #101010;
-}
-/* Фракційний склад */
 
 /* фінансові звіти */
-.reports{
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    flex-wrap: wrap;
+
+.reports .item {
+  margin: 50px;
+  background-color: var(--second-akcent);
+  padding: 35px 25px;
+  border-radius: 15px 0px 15px 0px;
+  width: 500px;
 }
-.reports .item{
-    margin: 50px;  
-    background-color: var(--second-akcent);
-    padding: 35px 25px;
-    border-radius: 15px 0px 15px 0px;
-    width: 500px;        
-}
-.reports a{
-    color: var(--t-main);
+.reports a {
+  color: var(--t-main);
 }
 /* фінансові звіти */
+.FinZvit{
+  padding-bottom: 150px;
+}
 
+.FinZvit .card-relative {
+  min-width: 350px;
+  height: 350px;
+}
 
+.FinZvit .box {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background: var(--main);
+  border-radius: 15px 0 15px 0;
+  transition: 0.5s;
+}
 
+.FinZvit .card:hover .box {
+  transform: translateY(-25px);
+}
 
+.box:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.03);
+}
 
-/* footer */
+.FinZvit .content {
+  padding: 15px;
+  text-align: center;
+  z-index: 10;
+}
 
-footer{
-    height: 300px;
-    background-color: #141414;
-    color: #e9e9e9;
+.FinZvit .numerous {
+  position: absolute;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 6em;
+  z-index: -1;
+}
+
+.FinZvit ul{
+  margin-top: 50px;
+}
+
+.FinZvit ul a {
+  font-weight: 300;
+  color: var(--t-main);
+  float: left;
+  text-align: left;
+  margin: 5px 0;
 }
 /* footer */
+
+footer {
+  height: 300px;
+  background-color: var(--akcent);
+  color: #e9e9e9;
+  padding: 50px 100px;
+}
+/* footer */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
