--- a/style/style.css
+++ b/style/style.css
@@ -33,12 +33,10 @@ p, a, svg {
 
   list-style: none;
   text-decoration: none;
-  
-  user-select: none;
- 
 }
 html {
   scroll-behavior: smooth;
+  user-select: none;
 }
 h1,
 h2,
@@ -82,9 +80,17 @@ html::before {
 }
 
 .title {
-  font-size: 70px;
+  font-size: 3em;
   margin-bottom: 40px;
   text-align: center;
+}
+@media all and (max-width: 600px) {
+  p, a, svg {
+    font-size: 14px;
+  }
+  .title {
+    font-size: 2em;
+  }
 }
 
 /* загальне */
@@ -98,19 +104,7 @@ html::before {
   height: 100%;
   background: rgba(255, 255, 255, 0.03);
 }
-.giroscop {
-  min-width: 300px;
-  background: var(--main);
-  border-radius: 15px 0 15px 0;
 
-  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3),
-    -5px -5px 15px rgba(255, 255, 255, 0.1);
-  border-radius: 15px 0 15px 0;
-  margin: 20px;
-
-  transition: 1s;
-  padding: 20px;
-}
 
 .df {
   display: flex;
@@ -147,15 +141,12 @@ html::before {
   position: absolute;
   top: -10px;
   right: 30px;
-  font-size: 8rem;
+  font-size: 6rem;
   color: var(--akcent);
-  opacity: 0.5;
 }
 
-
-
 button {
-  font-size: 50px;
+  font-size: 35px;
   padding: 0 15px;
   cursor: pointer;  
   background-color: transparent;
@@ -173,11 +164,25 @@ button {
 
 .card-relative {
   position: relative;
+  
   box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3),
   -5px -5px 15px rgba(255, 255, 255, 0.1);
 border-radius: 15px 0 15px 0;
-margin: 20px;
+
+margin: 10px;
 transition: 0.5s;
+}
+
+.giroscop {
+  min-width: 200px;
+  background: var(--main);
+
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3),
+    -5px -5px 15px rgba(255, 255, 255, 0.1);
+  border-radius: 15px 0 15px 0;
+
+  transition: 1s;
+  padding: 15px;
 }
 /* загальне */
 
@@ -197,7 +202,7 @@ nav ul {
 }
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 nav .logo {
@@ -206,7 +211,33 @@ nav .logo {
 .blac{
   background-color: var(--second-akcent);
 }
+@media all and (max-width: 1150px) {
+  .nav-item, a{
+    margin: 0;
+    font-size: 15px;
+    margin: 0px;
+  }
+  ul.contact .nav-item {    
+  margin: 15px;
+  }    
+  nav .logo {
+    margin-right: 0px;
+  }
+}
 
+@media all and (max-width: 600px) {
+
+  .d-n{
+    display: none;
+  }
+  ul.contact .nav-item {    
+  margin: 15px;
+  }
+    
+  nav .logo {
+    margin-left: 20px;
+  }
+}
 /* navbar */
 
 /* HERO */
@@ -252,6 +283,8 @@ nav .logo {
     rgba(0, 0, 0, 0.536) 100%
   );
 }
+
+
 
 .hero .slider-img {
   z-index: -1;
@@ -317,9 +350,24 @@ nav .logo {
 
   position: absolute;
   width: 80%;
-  margin: 20% 10%;
+  margin: 200px 10%;
   z-index: 10;
 }
+
+
+
+@media all and (max-width: 1150px) {
+  .hero-title {
+    font-size: 60px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .hero-title {
+    font-size: 11vw;
+  }
+}
+
 /* HERO */
 
 /* advantages */
@@ -351,7 +399,21 @@ nav .logo {
   text-align: center;
 }
 
+@media all and (max-width: 1150px) {
+/*  */
+}
 
+@media all and (max-width: 600px) {
+ 
+  .advantages svg {
+    height: 40px;
+  }
+  .advantages p {
+    font-size: 14px;
+    height: 100px;    
+  text-indent: 0px;
+  }
+}
 /* advantages */
 
 /* aboutUs */
@@ -429,11 +491,52 @@ nav .logo {
   text-indent: 0px;
 }
 
+@media all and (max-width: 1150px) {
+
+}
+
+@media all and (max-width: 600px) {
+  
+  .AboutUs .text {
+    width: 80%;
+  }
+  .riding-text p{
+    font-size: 20px;
+  }
+  .AboutUs .riding-text {
+    width: 80%;
+  }  
+  
+  .riding-text .card-relative {
+    min-width: 300px;
+    height: 250px; 
+  }
+  
+  .riding-text .content {
+    padding: 5px;
+  }   
+  .riding-text .content h3 {
+    font-size: 1.2rem;
+  }
+  
+  .riding-text .content p {
+    font-size: 0.8rem;
+    text-indent: 0px;
+  }
+}
+
+
+
+
+
+
+
+
 /* aboutUs */
 
 /* Продукція */
 .Products {
-  height: 1500px;
+  height: 1000px;
 }
 
 .Products .galary {
@@ -450,26 +553,30 @@ nav .logo {
 
 .Products .giroscop {
   transform: rotatez(calc(-36deg * var(--j)));
-  height: 250px;
+  height: 260px;
   transition: 4s;
+  width: 480px;
 }
 
 .Products .content {
   padding: 80px 0px;
   text-align: center;
 }
+.Products p{
+  font-size: 18px;
+}
 
 .Products h3 {
   top: 20px;
   width: 80%;
-  font-size: 2rem;
+  font-size: 1.8rem;
   text-align: center;
 }
 
 .Products .text {
   margin-top: 50px;
   padding-top: 100px;
-  margin-left: 150px;
+  margin-left: 5%;
   width: 50%;
 }
 
@@ -481,6 +588,68 @@ nav .logo {
 .Products .galary {
   left: 650px;
 }
+
+
+@media all and (max-width: 1150px) {
+
+  .Products .card {
+    transform: rotatez(calc(36deg * var(--i))) translatex(560px);
+  }
+  
+  .Products .giroscop {
+    height: 260px;
+    width: 300px;
+  }
+  
+  .Products p{
+    font-size: 16px;
+  }  
+  .Products h3 {
+    font-size: 1.2rem;
+  }
+
+  .Products .galary {
+    left: 650px;
+  }
+}
+
+@media all and (max-width: 600px) {
+
+  .Products .galary {
+    top: 370px;
+  }  
+  .Products .giroscop {
+    height: 250px;
+    width: 230px;
+  }
+  
+  .Products .content {
+    padding: 20px 0px;
+  }
+  .Products p{
+    font-size: 14px;
+  }  
+  .Products h3 {    
+    position: relative;
+top: -15px;
+left: 0;
+right: 0;
+    margin: auto;
+    font-size: 1.2rem;
+  }  
+  .Products .text {
+    padding-top: 0;
+    margin-top: 0px;
+    margin-left: 5%;
+    width: 90%;
+  }  
+  .Products .galary {
+    left: 730px;
+  } 
+ 
+}
+
+
 
 /* Продукція */
 
@@ -494,8 +663,9 @@ nav .logo {
 }
 
 .sheben .text {
-  width: 100%;
-  margin-left: 500px;
+  min-width: 110%;
+  max-width: 400px;
+  margin-left: 1000px;
   margin-right: 5%;
   margin-top: 100px; 
 }
@@ -504,11 +674,14 @@ nav .logo {
 .table-sheben {
   color: var(--white);
   padding-top: 50px;
-  align-items: stretch;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 32px;
+  grid-auto-flow: dense;
 }
 .table-sheben li {
-  width: 300px;
-  margin: 15px 15px;
+  margin: 10px 15px;
   padding: 15px;
 }
 .table-sheben li {
@@ -557,6 +730,125 @@ nav .logo {
 }
 
 
+@media all and (max-width: 1150px) {
+  .table-sheben {  
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+  
+
+  .sheben .galary {
+    left: -650px;
+  }
+  .sheben .card {
+    transform: rotatez(calc(45deg * var(--i))) translatex(600px);
+  } 
+
+
+  .sheben .content img {
+    width: 250px;
+  }
+  
+  .sheben .numerous {
+    font-size: 2.4rem;
+  }
+  
+  .sheben .giroscop {
+    height: 300px;
+    width: 250px;
+  }
+  
+  .sheben .control {
+    top: 5%;
+    left: 45%;
+    width: 70%;
+    transform: rotatez(90deg);
+  }
+}
+
+
+@media all and (max-width: 900px) {
+  .sheben{
+    height: 900px;
+  }
+
+  .sheben .text {
+    min-width: 40vw;
+    margin-left: 130vw;
+    margin-right: 5%;
+    margin-top: 150px; 
+  }
+  .table-sheben {
+    position: absolute;
+    top: 680px;
+    left: 0;
+    right: 0;
+    width: 70%;
+    margin: auto;
+  
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 32px;
+    grid-auto-flow: dense;
+  }
+
+  .sheben .control {
+    top: 5%;
+    left: 35%;
+    width: 70%;
+    transform: rotatez(90deg);
+  }
+}
+
+@media all and (max-width: 600px) {
+  .table-sheben li {
+    margin: 0px 15px;
+    padding: 15px;
+  }
+  .sheben .container{
+    position: absolute;
+  }
+  .sheben .galary-container {
+    position: absolute;
+    top: 50px;
+    left: -100px;
+  }
+  .sheben{
+    height: 1400px;    
+  }
+
+  .sheben .text {
+    position: relative;
+    
+    min-width: 40vw;
+    margin-left: 150px;
+    margin-right: 5%;
+    margin-top: 600px;
+  }
+  .table-sheben {
+    position: absolute;
+    top: 250px;
+    left: -130px;
+    right: 0;
+    width: 150%;
+  
+    
+  
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-gap: 32px;
+    grid-auto-flow: dense;
+  }
+
+  .sheben .control {
+    top: 5%;
+    left: 35%;
+    width: 70%;
+    transform: rotatez(90deg);
+  }
+}
+
+
+
 /* Фракційний склад */
 
 /* фінансові звіти */
@@ -568,6 +860,7 @@ nav .logo {
   border-radius: 15px 0px 15px 0px;
   width: 500px;
 }
+
 
 /* фінансові звіти */
 .FinZvit{
@@ -639,7 +932,7 @@ footer {
   height: 300px;
   background-color: var(--akcent);
   color: #e9e9e9;
-  padding: 50px 100px;
+  padding: 50px 10%;
 }
 /* footer */
 
@@ -677,3 +970,10 @@ footer {
 
 
 
+@media all and (max-width: 1150px) {
+
+}
+
+@media all and (max-width: 600px) {
+
+}
